# 3DFlight

./: .gitattributes  .gitignore  AGENTS.MD  CMakeLists.txt  CMakePresets.json  landmask_16k.tif  vcpkg.json
Instructions/: Equations.txt
NE_Shaded/: NE1_HR_LC_SR.README.html
assets/etopo/tiles/: t.py
assets/models/: AIM120D.glb  B2.glb
config/: cockpit_view.json
shaders/: atmosphere_common.hlsli  atmosphere_lut.hlsl  basic.hlsl  earth.hlsl  skybox.hlsl  terrain.hlsl
src/: d3d12_renderer.cpp  d3d12_renderer.h  earth.cpp  earth.h  gltf_loader.cpp  gltf_loader.h  main.cpp  mesh.cpp  mesh.h  sim.cpp  sim.h
src/satellite/: satellite_streamer.cpp  satellite_streamer.h  world_tile_system.cpp  world_tile_system.h
src/terrain/: etopo_tile.cpp  etopo_tile.h  terrain_mesh.cpp  terrain_mesh.h  terrain_system.cpp  terrain_system.h
tools/: make_landmask.py
